flowcontroller/yamls/networkpolicy-allow-flink-taskmanager-to-dns-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flink-taskmanager-to-dns-egress
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Egress
  podSelector: 
    matchLabels: 
      app: flink
      component: taskmanager
  egress:
  - to:
    - namespaceSelector: 
        matchLabels: 
          name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
